--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <a href="#postulacion" class="btn">Postular ahora</a>
       </div>
       <div class="hero-image">
-        <img src="images/imp.png" alt="Impulso Joven">
+        <img src="https://github.com/Thomiuss/Web-prueba-final-Impulso-Joven/blob/main/images/imp.png" alt="Impulso Joven">
       </div>
     </div>
   </section>
