--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <a href="#postulacion" class="btn">Postular ahora</a>
       </div>
       <div class="hero-image">
-        <img src="documentos/imp.png" alt="Jóvenes en pasantía">
+         <img src="Img/imp.png" alt="Impulso Joven">
       </div>
     </div>
   </section>
